// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coma in modificators 1`] = `
Object {
  "combinedComponents": Array [],
  "components": Object {
    "Layer": Object {
      "combinedComponents": Array [],
      "components": Object {},
      "mixins": Array [],
      "modificators": Object {
        "::after, ::before": Object {
          "combinedComponents": Array [],
          "components": Object {},
          "mixins": Array [],
          "modificators": Object {},
          "styles": Object {
            "color": "red",
          },
        },
      },
      "styles": Object {},
    },
  },
  "mixins": Array [],
  "modificators": Object {},
  "styles": Object {},
}
`;

exports[`coma in modificators 2`] = `
Object {
  ".Layer-{{ hash }}::after,.Layer-{{ hash }}::before": Object {
    "color": "red",
  },
}
`;

exports[`complex 1`] = `
Object {
  "combinedComponents": Array [],
  "components": Object {
    "Button": Object {
      "combinedComponents": Array [],
      "components": Object {},
      "mixins": Array [],
      "modificators": Object {
        ":not([disabled]):hover": Object {
          "combinedComponents": Array [],
          "components": Object {},
          "mixins": Array [],
          "modificators": Object {},
          "styles": Object {
            "background-color": "transparent",
          },
        },
      },
      "styles": Object {},
    },
  },
  "mixins": Array [],
  "modificators": Object {},
  "styles": Object {},
}
`;

exports[`complex 2`] = `
Object {
  ".Button-{{ hash }}:not([disabled]):hover": Object {
    "background-color": "transparent",
  },
}
`;

exports[`complex selectors #1 1`] = `
Object {
  ".Bar-{{ hash }}": Object {
    "color": "green",
    "font-size": "10px",
  },
  ".Bar-{{ hash }} +.NextChild-{{ hash }}": Object {
    "color": "red'",
  },
  ".Bar-{{ hash }} .SucceessButton-{{ hash }}, .Bar-{{ hash }} .PrimaryButton-{{ hash }}, .Bar-{{ hash }} .WarningButton-{{ hash }}": Object {
    "padding": "10px",
  },
  ".Bar-{{ hash }} ~.NextFirst-{{ hash }}": Object {
    "padding": "20px",
  },
}
`;

exports[`complex selectors #2 1`] = `
Object {
  ".Foo-{{ hash }} .SucceessButton-{{ hash }} +.Icon-{{ hash }}, .Foo-{{ hash }} .PrimaryButton-{{ hash }} +.Icon-{{ hash }}, .Foo-{{ hash }} .WarningButton-{{ hash }} +.Icon-{{ hash }}, .Bar-{{ hash }} .SucceessButton-{{ hash }} +.Icon-{{ hash }}, .Bar-{{ hash }} .PrimaryButton-{{ hash }} +.Icon-{{ hash }}, .Bar-{{ hash }} .WarningButton-{{ hash }} +.Icon-{{ hash }}": Object {
    "padding-right": "15px",
  },
  ".Foo-{{ hash }} .SucceessButton-{{ hash }} .Spinner-{{ hash }}, .Foo-{{ hash }} .PrimaryButton-{{ hash }} .Spinner-{{ hash }}, .Foo-{{ hash }} .WarningButton-{{ hash }} .Spinner-{{ hash }}, .Bar-{{ hash }} .SucceessButton-{{ hash }} .Spinner-{{ hash }}, .Bar-{{ hash }} .PrimaryButton-{{ hash }} .Spinner-{{ hash }}, .Bar-{{ hash }} .WarningButton-{{ hash }} .Spinner-{{ hash }}": Object {
    "color": "yellow",
  },
  ".Foo-{{ hash }} .SucceessButton-{{ hash }}, .Bar-{{ hash }} .SucceessButton-{{ hash }}, .Foo-{{ hash }} .PrimaryButton-{{ hash }}, .Bar-{{ hash }} .PrimaryButton-{{ hash }}, .Foo-{{ hash }} .WarningButton-{{ hash }}, .Bar-{{ hash }} .WarningButton-{{ hash }}": Object {
    "padding": "10px",
  },
  ".Foo-{{ hash }} .SucceessButton-{{ hash }}:hover, .Foo-{{ hash }} .PrimaryButton-{{ hash }}:hover, .Foo-{{ hash }} .WarningButton-{{ hash }}:hover,.Foo-{{ hash }} .SucceessButton-{{ hash }}:active, .Foo-{{ hash }} .PrimaryButton-{{ hash }}:active, .Foo-{{ hash }} .WarningButton-{{ hash }}:active,.Foo-{{ hash }} .SucceessButton-{{ hash }}:focus, .Foo-{{ hash }} .PrimaryButton-{{ hash }}:focus, .Foo-{{ hash }} .WarningButton-{{ hash }}:focus, .Bar-{{ hash }} .SucceessButton-{{ hash }}:hover, .Bar-{{ hash }} .PrimaryButton-{{ hash }}:hover, .Bar-{{ hash }} .WarningButton-{{ hash }}:hover,.Bar-{{ hash }} .SucceessButton-{{ hash }}:active, .Bar-{{ hash }} .PrimaryButton-{{ hash }}:active, .Bar-{{ hash }} .WarningButton-{{ hash }}:active,.Bar-{{ hash }} .SucceessButton-{{ hash }}:focus, .Bar-{{ hash }} .PrimaryButton-{{ hash }}:focus, .Bar-{{ hash }} .WarningButton-{{ hash }}:focus": Object {
    "color": "red",
  },
  ".Foo-{{ hash }}, .Bar-{{ hash }}": Object {
    "font-size": "10px",
  },
  "@media (max-width: 699px)": Object {
    ".Foo-{{ hash }} .SucceessButton-{{ hash }}, .Foo-{{ hash }} .PrimaryButton-{{ hash }}, .Foo-{{ hash }} .WarningButton-{{ hash }}, .Bar-{{ hash }} .SucceessButton-{{ hash }}, .Bar-{{ hash }} .PrimaryButton-{{ hash }}, .Bar-{{ hash }} .WarningButton-{{ hash }}": Object {
      "background": "green",
    },
  },
}
`;

exports[`with classes 1`] = `
Object {
  "combinedComponents": Array [],
  "components": Object {
    "Tab.active.super": Object {
      "combinedComponents": Array [],
      "components": Object {},
      "mixins": Array [],
      "modificators": Object {},
      "styles": Object {
        "color": "gray",
      },
    },
  },
  "mixins": Array [],
  "modificators": Object {},
  "styles": Object {},
}
`;

exports[`with classes 2`] = `
Object {
  ".Tab-{{ hash }}.active.super": Object {
    "color": "gray",
  },
}
`;
